# opengl-renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cmakelists.txt  makefile  opengl-render.code-workspace  vcpkg.json
.github/workflows/: build-and-test.yml
assets/models/Goku/: Goku.cprj  eyes.DDS  face.dds
assets/models/Goku/results/: pants.DDS  shirt.DDS
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
include/: FileLoader.h  Geometry.h  Material.h  Model.h  OBJLoader.h  controls.h  geometry.h  material.h  model.h  shaders.h
include/ECS/: Component.h  Entity.h  System.h  SystemManager.h
include/ECS/Components/: MeshComponent.hpp  RenderComponent.h  TransformComponent.h  TransformComponent.hpp
include/ECS/Systems/: RenderSystem.h
src/: Controls.cpp  FileLoader.cpp  Geometry.cpp  Model.cpp  OBJLoader.cpp  Shaders.cpp  controls.cpp  geometry.cpp  main.cpp  model.cpp  shaders.cpp
src/ECS/: Entity.cpp  SystemManager.cpp
src/ECS/Components/: RenderComponent.cpp
src/ECS/Systems/: RenderSystem.cpp
tests/: CMakeLists.txt
tests/src/: fileloader_test.cpp
tests/src/ecs/: component_test.cpp  entity_test.cpp  system_manager_test.cpp  system_test.cpp
tests/src/ecs/Components/: mesh_component_test.cpp  transform_component_test.cpp
tests/src/ecs/mocks/: mock_component.h  mock_system.h
